src/main/java/antlr/cidlParser.java
// Generated from cidl.g4 by ANTLR 4.2
package antlr;

import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cidlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__7=1, T__6=2, T__5=3, T__4=4, T__3=5, T__2=6, T__1=7, T__0=8, TYPE=9, 
		COMPONENT=10, IMPLEMENTS=11, LPAREN=12, RPAREN=13, SUBCOMPONENTS=14, INTERFACE_STRING=15, 
		NAME=16, METHOD_NAME=17, SECURITY_LEVEL=18, WS=19, INTERFACE_TYPE=20;
	public static final String[] tokenNames = {
		"<INVALID>", "'postcondition:'", "'->'", "'provide'", "'precondition:'", 
		"'assembly:'", "'require'", "'delegate:'", "'.'", "TYPE", "'component'", 
		"'implements'", "'('", "')'", "'subcomponents'", "'interface'", "NAME", 
		"METHOD_NAME", "SECURITY_LEVEL", "WS", "INTERFACE_TYPE"
	};
	public static final int
		RULE_component = 0, RULE_method_header = 1, RULE_information_flow_spec = 2, 
		RULE_pre = 3, RULE_post = 4, RULE_list_subcomponents = 5, RULE_interface_required = 6, 
		RULE_interface_provided = 7, RULE_assembly = 8, RULE_delegation = 9, RULE_component_interface = 10;
	public static final String[] ruleNames = {
		"component", "method_header", "information_flow_spec", "pre", "post", 
		"list_subcomponents", "interface_required", "interface_provided", "assembly", 
		"delegation", "component_interface"
	};

	@Override
	public String getGrammarFileName() { return "cidl.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cidlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(cidlParser.NAME, i);
		}
		public List_subcomponentsContext list_subcomponents() {
			return getRuleContext(List_subcomponentsContext.class,0);
		}
		public AssemblyContext assembly(int i) {
			return getRuleContext(AssemblyContext.class,i);
		}
		public List<TerminalNode> NAME() { return getTokens(cidlParser.NAME); }
		public List<DelegationContext> delegation() {
			return getRuleContexts(DelegationContext.class);
		}
		public DelegationContext delegation(int i) {
			return getRuleContext(DelegationContext.class,i);
		}
		public Interface_requiredContext interface_required() {
			return getRuleContext(Interface_requiredContext.class,0);
		}
		public Interface_providedContext interface_provided() {
			return getRuleContext(Interface_providedContext.class,0);
		}
		public TerminalNode COMPONENT() { return getToken(cidlParser.COMPONENT, 0); }
		public TerminalNode IMPLEMENTS() { return getToken(cidlParser.IMPLEMENTS, 0); }
		public List<AssemblyContext> assembly() {
			return getRuleContexts(AssemblyContext.class);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitComponent(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_component);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22); match(COMPONENT);
			setState(23); match(NAME);
			setState(24); match(IMPLEMENTS);
			setState(25); match(NAME);
			setState(26); list_subcomponents();
			setState(28);
			_la = _input.LA(1);
			if (_la==3) {
				{
				setState(27); interface_provided();
				}
			}

			setState(31);
			_la = _input.LA(1);
			if (_la==6) {
				{
				setState(30); interface_required();
				}
			}

			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==5) {
				{
				{
				setState(33); assembly();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==7) {
				{
				{
				setState(39); delegation();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_headerContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(cidlParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(cidlParser.NAME); }
		public List<TerminalNode> TYPE() { return getTokens(cidlParser.TYPE); }
		public TerminalNode METHOD_NAME() { return getToken(cidlParser.METHOD_NAME, 0); }
		public TerminalNode LPAREN() { return getToken(cidlParser.LPAREN, 0); }
		public Information_flow_specContext information_flow_spec() {
			return getRuleContext(Information_flow_specContext.class,0);
		}
		public TerminalNode TYPE(int i) {
			return getToken(cidlParser.TYPE, i);
		}
		public TerminalNode RPAREN() { return getToken(cidlParser.RPAREN, 0); }
		public Method_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterMethod_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitMethod_header(this);
		}
	}

	public final Method_headerContext method_header() throws RecognitionException {
		Method_headerContext _localctx = new Method_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_method_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); information_flow_spec();
			setState(46); match(TYPE);
			setState(47); match(METHOD_NAME);
			setState(48); match(LPAREN);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(49); match(TYPE);
				setState(50); match(NAME);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Information_flow_specContext extends ParserRuleContext {
		public PreContext pre() {
			return getRuleContext(PreContext.class,0);
		}
		public PostContext post() {
			return getRuleContext(PostContext.class,0);
		}
		public Information_flow_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_information_flow_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterInformation_flow_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitInformation_flow_spec(this);
		}
	}

	public final Information_flow_specContext information_flow_spec() throws RecognitionException {
		Information_flow_specContext _localctx = new Information_flow_specContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_information_flow_spec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); pre();
			setState(59); post();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(cidlParser.NAME, i);
		}
		public TerminalNode SECURITY_LEVEL(int i) {
			return getToken(cidlParser.SECURITY_LEVEL, i);
		}
		public List<TerminalNode> NAME() { return getTokens(cidlParser.NAME); }
		public List<TerminalNode> SECURITY_LEVEL() { return getTokens(cidlParser.SECURITY_LEVEL); }
		public PreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterPre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitPre(this);
		}
	}

	public final PreContext pre() throws RecognitionException {
		PreContext _localctx = new PreContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(4);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(62); match(NAME);
				setState(63); match(SECURITY_LEVEL);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(cidlParser.NAME, i);
		}
		public TerminalNode SECURITY_LEVEL(int i) {
			return getToken(cidlParser.SECURITY_LEVEL, i);
		}
		public List<TerminalNode> NAME() { return getTokens(cidlParser.NAME); }
		public List<TerminalNode> SECURITY_LEVEL() { return getTokens(cidlParser.SECURITY_LEVEL); }
		public PostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_post; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterPost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitPost(this);
		}
	}

	public final PostContext post() throws RecognitionException {
		PostContext _localctx = new PostContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_post);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(1);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(70); match(NAME);
				setState(71); match(SECURITY_LEVEL);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_subcomponentsContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(cidlParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(cidlParser.NAME); }
		public List<TerminalNode> COMPONENT() { return getTokens(cidlParser.COMPONENT); }
		public TerminalNode COMPONENT(int i) {
			return getToken(cidlParser.COMPONENT, i);
		}
		public List_subcomponentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_subcomponents; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterList_subcomponents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitList_subcomponents(this);
		}
	}

	public final List_subcomponentsContext list_subcomponents() throws RecognitionException {
		List_subcomponentsContext _localctx = new List_subcomponentsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_list_subcomponents);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMPONENT) {
				{
				{
				setState(77); match(COMPONENT);
				setState(78); match(NAME);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_requiredContext extends ParserRuleContext {
		public List<Method_headerContext> method_header() {
			return getRuleContexts(Method_headerContext.class);
		}
		public Method_headerContext method_header(int i) {
			return getRuleContext(Method_headerContext.class,i);
		}
		public Interface_requiredContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_required; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterInterface_required(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitInterface_required(this);
		}
	}

	public final Interface_requiredContext interface_required() throws RecognitionException {
		Interface_requiredContext _localctx = new Interface_requiredContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interface_required);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(6);
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85); method_header();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_providedContext extends ParserRuleContext {
		public List<Method_headerContext> method_header() {
			return getRuleContexts(Method_headerContext.class);
		}
		public Method_headerContext method_header(int i) {
			return getRuleContext(Method_headerContext.class,i);
		}
		public Interface_providedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_provided; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterInterface_provided(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitInterface_provided(this);
		}
	}

	public final Interface_providedContext interface_provided() throws RecognitionException {
		Interface_providedContext _localctx = new Interface_providedContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_interface_provided);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(3);
			setState(92); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(91); method_header();
				}
				}
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssemblyContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(cidlParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(cidlParser.NAME); }
		public List<TerminalNode> METHOD_NAME() { return getTokens(cidlParser.METHOD_NAME); }
		public TerminalNode METHOD_NAME(int i) {
			return getToken(cidlParser.METHOD_NAME, i);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterAssembly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitAssembly(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assembly);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(5);
			setState(97); match(NAME);
			setState(98); match(8);
			setState(99); match(METHOD_NAME);
			setState(100); match(2);
			setState(101); match(NAME);
			setState(102); match(8);
			setState(103); match(METHOD_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelegationContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(cidlParser.NAME, 0); }
		public List<TerminalNode> METHOD_NAME() { return getTokens(cidlParser.METHOD_NAME); }
		public TerminalNode METHOD_NAME(int i) {
			return getToken(cidlParser.METHOD_NAME, i);
		}
		public DelegationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delegation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterDelegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitDelegation(this);
		}
	}

	public final DelegationContext delegation() throws RecognitionException {
		DelegationContext _localctx = new DelegationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_delegation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(7);
			setState(106); match(METHOD_NAME);
			setState(107); match(2);
			setState(108); match(NAME);
			setState(109); match(8);
			setState(110); match(METHOD_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Component_interfaceContext extends ParserRuleContext {
		public TerminalNode INTERFACE_TYPE() { return getToken(cidlParser.INTERFACE_TYPE, 0); }
		public TerminalNode INTERFACE_STRING() { return getToken(cidlParser.INTERFACE_STRING, 0); }
		public Component_interfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_interface; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).enterComponent_interface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cidlListener ) ((cidlListener)listener).exitComponent_interface(this);
		}
	}

	public final Component_interfaceContext component_interface() throws RecognitionException {
		Component_interfaceContext _localctx = new Component_interfaceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_component_interface);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(INTERFACE_TYPE);
			setState(113); match(INTERFACE_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}